examples/infra/modules/heimdall/integrations/envoy-gateway.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-heimdall
  namespace: ${namespace}
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
  extAuth:
    grpc:
      backendRefs:
        - name: heimdall
          port: 4456
          namespace: heimdall
