examples/infra/modules/heimdall/integrations/istio.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: heimdall
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: heimdall-ext-auth
  rules:
    - {}
